--- a/projects/algo_guide/index.html
+++ b/projects/algo_guide/index.html
@@ -604,7 +604,7 @@
 <p class="admonition-title">Info</p>
 <p>本讲义不涉及C++语言的基础语法，但是对指针、引用、STL库这些比较复杂的语言知识点还是会有兼顾。</p>
 </div>
-<p>讲义包括常用技巧、基础算法、基础数据结构、算法设计、中高级算法、中高级数据结构、经典例题七个部分。目前第一稿已经写到基础数据结构的顺序表，正在校对中。</p>
+<p>讲义包括常用技巧、基础算法、基础数据结构、算法设计、中高级算法、中高级数据结构、经典例题七个部分。目前编写到基础数据结构的二叉树遍历，由于个人原因，暂时没有精力持续更新，暂停一段时间，何时继续开始目前尚无计划。</p>
 <p>项目使用 GitHub Pages 作为主力发布站点：<a href="https://majorli.github.io/algo_guide/" target="_blank">C++算法编程指南</a></p>
 <p>ReadTheDocs 上的站点为备用站：<a href="https://algo-guide.readthedocs.io/zh_CN/latest/" target="_blank">C++算法编程指南</a></p>
 <p>ReadTheDocs 上的备用站速度较慢，但是可以导出为PDF格式，且为预防主力站无法访问的不时之需，故将一直保持存在，内容将和主力站保持一致。</p>
